--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-blockies": "^1.4.1",
+    "@types/styled-components": "^5.1.25",
+    "@xmtp/xmtp-js": "^4.4.1",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "use-immer": "^0.7.0",
+    "uuid": "^8.3.2",
+    "wagmi": "^0.3.1"
   },
   "devDependencies": {
     "@types/node": "18.0.5",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
     "typescript": "4.7.4"
