--- a/package.json
+++ b/package.json
@@ -6,26 +6,38 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "rollup": "rollup -c"
   },
   "dependencies": {
     "@types/react-blockies": "^1.4.1",
     "@types/styled-components": "^5.1.25",
     "@xmtp/xmtp-js": "^4.4.1",
     "next": "12.2.2",
+    "postcss": "^8.4.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-typescript2": "^0.32.1",
     "use-immer": "^0.7.0",
     "uuid": "^8.3.2",
     "wagmi": "^0.3.1"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^22.0.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "@types/node": "18.0.5",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@types/uuid": "^8.3.4",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
+    "rollup": "^2.77.0",
+    "rollup-plugin-dts": "^4.2.2",
     "typescript": "4.7.4"
-  }
+  },
+  "main": "lib/index.js",
+  "module": "lib/index.esm.js",
+  "types": "lib/index.d.ts"
 }
