--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "boom",
+  "name": "relay",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/YOUR_REPOSITORY_NAME"
   },
   "version": "0.1.0",
   "description": "A simple template for a custom React component library",
   "scripts": {
-    "rollup": "rollup -c",
-    "test": "jest",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "rollup": "rollup -c"
   },
-  "author": "YOUR_NAME",
+  "author": "daopanel",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.16.0",
