--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "relay",
+  "name": "@daopanel/receiver",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/YOUR_REPOSITORY_NAME"
+    "registry": "https://registry.npmjs.org/"
   },
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A simple template for a custom React component library",
   "scripts": {
     "rollup": "rollup -c"
@@ -12,20 +12,30 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.18.9",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@mdx-js/react": "^2.1.2",
+    "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-image": "^2.1.1",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@rollup/plugin-url": "^7.0.0",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.6",
     "@types/react": "^18.0.15",
+    "@types/react-blockies": "^1.4.1",
+    "@types/styled-components": "^5.1.25",
+    "@types/uuid": "^8.3.4",
+    "@xmtp/xmtp-js": "^5.1.0",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.3",
+    "babel-plugin-styled-components": "^2.0.7",
     "css-loader": "^6.5.1",
-    "react": "^18.2.0",
+    "react-blockies": "^1.4.1",
     "react-dom": "^18.2.0",
     "rollup": "^2.60.0",
     "rollup-plugin-dts": "^4.0.1",
@@ -35,12 +45,24 @@
     "sass": "^1.43.5",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
-    "typescript": "^4.7.4"
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.4",
+    "wagmi": "^0.6.0"
+  },
+  "peerDependencies": {
+    "@xmtp/xmtp-js": "^5.1.0",
+    "react": "^18.2.0",
+    "styled-components": "^5.3.5",
+    "use-immer": "^0.7.0",
+    "wagmi": "^0.6.0"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "dependencies": {
+    "@babel/runtime": "^7.18.9"
+  }
 }
