--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "outDir": "dist",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "emitDeclarationOnly": true
-  }
+    "emitDeclarationOnly": true,
+  },
+  "include": ["src", "index.d.ts"]
 }
