get rid of xmtp context

--- a/package.json
+++ b/package.json
@@ -61,5 +61,8 @@
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "dependencies": {
+    "zustand": "^4.0.0"
+  }
 }
