--- a/package.json
+++ b/package.json
@@ -61,5 +61,8 @@
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "dependencies": {
+    "@daopanel/receiver": "file:.yalc/@daopanel/receiver"
+  }
 }
