--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-//registry.npmjs.org/:_authToken=${NPM_TOKEN}
-scope=daopanel
+//registry.npmjs.org/:_authToken=${RELAYCC_NPM_TOKEN}
+scope=@relaycc
