--- a/package.json
+++ b/package.json
@@ -36,18 +36,16 @@
     "rollup-plugin-polyfill-node": "^0.10.2",
     "rollup-plugin-postcss": "^4.0.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "wagmi": "^0.6.0",
+    "use-immer": "^0.7.0",
+    "react-blockies": "^1.4.1"
   },
   "peerDependencies": {
     "@xmtp/xmtp-js": "^6.0.2",
     "react": "^16 || ^17 || ^18",
     "react-dom": "^16 || ^17 || ^18",
     "styled-components": "^5.3.5"
-  },
-  "dependencies": {
-    "wagmi": "^0.6.0",
-    "use-immer": "^0.7.0",
-    "react-blockies": "^1.4.1"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
