--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-typescript": "^8.3.0",
     "@rollup/plugin-url": "^7.0.0",
-    "@types/react": "^18.2.0",
+    "@types/react": "^18.0.1",
     "@types/react-blockies": "^1.4.1",
     "@types/styled-components": "^5.1.25",
+    "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.3",
     "babel-plugin-styled-components": "^2.0.7",
     "react": "^18.2.0",
@@ -36,16 +37,19 @@
     "rollup-plugin-polyfill-node": "^0.10.2",
     "rollup-plugin-postcss": "^4.0.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.4",
-    "wagmi": "^0.6.0",
-    "use-immer": "^0.7.0",
-    "react-blockies": "^1.4.1"
+    "typescript": "^4.7.4"
   },
   "peerDependencies": {
     "@xmtp/xmtp-js": "^6.0.2",
     "react": "^16 || ^17 || ^18",
     "react-dom": "^16 || ^17 || ^18",
     "styled-components": "^5.3.5"
+  },
+  "dependencies": {
+    "react-blockies": "^1.4.1",
+    "use-immer": "^0.7.0",
+    "uuid": "^8.3.2",
+    "wagmi": "^0.6.0"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
