--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "style-loader": "^3.3.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
-    "wagmi": "^0.6.0"
+    "wagmi": "^0.6.0",
+    "webpack-bundle-analyzer": "^4.6.1"
   },
   "peerDependencies": {
     "@xmtp/xmtp-js": "^5.1.0",
