--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/react-blockies": "^1.4.1",
     "@types/styled-components": "^5.1.25",
     "@types/uuid": "^8.3.4",
+    "eslint": "^8.23.0",
+    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^2.60.0",
