--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "scripts": {
     "build": "rollup -c",
     "watch": "rollup -c -w",
+    "lint": "eslint src/",
+    "prettier": "prettier --check .",
+    "typecheck": "tsc --emitDeclarationOnly false --noEmit",
     "patch": "npm version patch -m 'patch: Bump version to %s'"
   },
   "author": "Relay",
@@ -23,6 +26,15 @@
     "@types/styled-components": "^5.1.25",
     "@types/uuid": "^8.3.4",
     "eslint": "^8.23.0",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-next": "12.1.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.4.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
