--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "outDir": "dist",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "emitDeclarationOnly": true,
+    "emitDeclarationOnly": true
   },
   "include": ["src", "index.d.ts"]
 }
