--- a/package.json
+++ b/package.json
@@ -1,26 +1,67 @@
 {
-  "name": "template-react-component-library",
-  "version": "0.0.1",
-  "description": "A simple template for a custom React component library",
-  "scripts": {
-    "rollup": "rollup -c"
+  "name": "@relaycc/receiver",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   },
-  "author": "Alex Eagleson",
-  "license": "ISC",
+  "version": "0.1.32",
+  "description": "The best way to add wallet messaging to your site.",
+  "scripts": {
+    "build": "rollup -c",
+    "watch": "rollup -c -w",
+    "lint": "eslint src/",
+    "prettier": "prettier --check .",
+    "prettier:fix": "prettier . --write",
+    "typecheck": "tsc --emitDeclarationOnly false --noEmit",
+    "patch": "npm version patch -m 'patch: Bump version to %s'"
+  },
+  "author": "Relay",
+  "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@rollup/plugin-image": "^2.1.1",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-typescript": "^8.3.0",
-    "@types/react": "^17.0.34",
-    "react": "^17.0.2",
+    "@rollup/plugin-url": "^7.0.0",
+    "@types/react": "^18.0.1",
+    "@types/react-blockies": "^1.4.1",
+    "@types/styled-components": "^5.1.25",
+    "@types/uuid": "^8.3.4",
+    "eslint": "^8.23.0",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-next": "12.1.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.4.0",
+    "prettier": "^2.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^2.60.0",
-    "rollup-plugin-dts": "^4.0.1",
-    "typescript": "^4.4.4"
+    "rollup-plugin-postcss": "^4.0.1",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.4"
+  },
+  "peerDependencies": {
+    "react": "^16 || ^17 || ^18",
+    "react-dom": "^16 || ^17 || ^18",
+    "styled-components": "^5.3.5"
+  },
+  "dependencies": {
+    "@ethersproject/abstract-signer": "^5.7.0",
+    "@ethersproject/address": "^5.7.0",
+    "@xmtp/xmtp-js": "^6.0.2",
+    "react-blockies": "^1.4.1",
+    "use-immer": "^0.7.0",
+    "uuid": "^8.3.2",
+    "wagmi": "^0.6.0"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/types/index.d.ts"
 }
