--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "@rollup/plugin-url": "^7.0.0",
     "@types/react": "^18.0.1",
     "@types/react-blockies": "^1.4.1",
+    "@types/react-transition-group": "^4.4.5",
     "@types/styled-components": "^5.1.25",
-    "@types/uuid": "^8.3.4",
-    "eslint": "^8.23.0",
     "@typescript-eslint/eslint-plugin": "5.17.0",
     "@typescript-eslint/parser": "5.17.0",
+    "eslint": "^8.23.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "8.5.0",
@@ -52,11 +52,12 @@
     "@ethersproject/abstract-signer": "^5.7.0",
     "@ethersproject/address": "^5.7.0",
     "@xmtp/xmtp-js": "^6.0.2",
+    "framer-motion": "^4.1.17",
     "react-blockies": "^1.4.1",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.5",
     "use-immer": "^0.7.0",
-    "uuid": "^8.3.2",
-    "wagmi": "^0.6.0"
+    "zustand": "^4.1.1"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
