Add `patch` and `pub` scripts

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prettier": "prettier --check .",
     "prettier:fix": "prettier . --write",
     "typecheck": "tsc --emitDeclarationOnly false --noEmit",
-    "patch": "npm version patch -m 'patch: Bump version to %s'"
+    "patch": "npm version patch -m 'patch: Bump version to %s'",
+    "pub": "npm run lint && npm run prettier && npm run typecheck && npm run build && npm publish"
   },
   "author": "Relay",
   "license": "MIT",
