Multiple changes, centered around Lens/Wagmi/ENS
* Removed wagmi dependency to avoid having to either use a root
  provider or try to work with multiple providers
* Added useEnsName, useEnsAvatar, useLensAddress, etc
  * These hooks all mostly work the same, need to add in a single
    hook to rule them all that can be used, most components that
    need one need all of them.
* Added Lens integration
  * the gql fetching code needs to be cleaned up, but it's pretty
    simple so this should be straight forward
* Pulled useLaunch into it's own file and reused it in Launcher
  component
* Launcher component has type errors right now
* The peer address screen dispatch still uses a peer address,
  rather than a "handle", need to update it.
* Components have been migrated to the wagmi-less hooks
* Added LoadingText component for name fetching states
* AddressInfo is having some flashing/loading problems
* For some reason Alchemy request are getting triggered a TON, it
  almost looks like there's a render loop somewhere
* Alchemy provider code needs to be cleaned up

--- a/package.json
+++ b/package.json
@@ -53,11 +53,13 @@
   "dependencies": {
     "@ethersproject/abstract-signer": "^5.7.0",
     "@ethersproject/address": "^5.7.0",
+    "@ethersproject/providers": "^5.7.0",
     "@relaycc/xmtp-js": "0.1.2",
+    "gql": "^1.1.2",
+    "graphql-request": "^5.0.0",
     "react-blockies": "^1.4.1",
     "styled-components": "^5.3.5",
     "use-immer": "^0.7.0",
-    "wagmi": "^0.6.4",
     "zustand": "^4.1.1"
   },
   "main": "dist/cjs/index.js",
