--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prettier": "prettier --check .",
     "prettier:fix": "prettier . --write",
     "typecheck": "tsc --emitDeclarationOnly false --noEmit",
+    "sanity": "npm run lint && npm run prettier && npm run typecheck && npm run build",
     "patch": "npm version patch -m 'patch: Bump version to %s'",
     "pub": "npm run lint && npm run prettier && npm run typecheck && npm run build && npm run patch && npm publish"
   },
