--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@ethersproject/address": "^5.7.0",
     "@ethersproject/providers": "^5.7.0",
     "@relaycc/xmtp-js": "0.1.2",
+    "encoding": "^0.1.13",
     "gql": "^1.1.2",
     "graphql-request": "^5.0.0",
     "react-blockies": "^1.4.1",
