--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "@ethersproject/address": "^5.7.0",
     "@ethersproject/providers": "^5.7.0",
     "@headlessui/react": "^1.7.3",
-    "@relaycc/xmtp-js": "0.1.2",
+    "@relaycc/xmtp-js": "^0.1.3",
+    "@tanstack/react-query": "^4.10.3",
     "framer-motion": "^4.1.17",
     "gql": "^1.1.2",
     "graphql-request": "^5.0.0",
