--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
-  "version": "0.1.61",
+  "version": "0.1.62",
   "description": "The best way to add wallet messaging to your site.",
   "scripts": {
     "build": "rollup -c",
@@ -22,6 +22,7 @@
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-typescript": "^8.3.0",
     "@rollup/plugin-url": "^7.0.0",
+    "@tanstack/react-query-devtools": "^4.12.0",
     "@types/react": "^18.0.1",
     "@types/react-blockies": "^1.4.1",
     "@types/react-transition-group": "^4.4.5",
@@ -54,7 +55,10 @@
     "@ethersproject/address": "^5.7.0",
     "@ethersproject/providers": "^5.7.0",
     "@headlessui/react": "^1.7.3",
-    "@relaycc/xmtp-js": "0.1.2",
+    "@motionone/dom": "^10.14.2",
+    "@relaycc/xmtp-js": "^0.1.3",
+    "@tanstack/react-query": "^4.10.3",
+    "encoding": "^0.1.13",
     "framer-motion": "^4.1.17",
     "gql": "^1.1.2",
     "graphql-request": "^5.0.0",
