Migrate to web worker implementation
* Instead of depending on `xmtp-js`, receiver initialization takes an
  XMTP client as an argument.
* A bunch of types were added to fill in the removed `xmtp-js` types
* Context-based config was updated to provide the passed XMTP client to
  the rest of receiver
* Various ad-hoc changes were needed to support the new types and
  dependency injection type of initialization.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     // Default
     "target": "es5",
+    "lib": ["ES2020", "DOM"],
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
