--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "framer-motion": "^4.1.17",
     "gql": "^1.1.2",
     "graphql-request": "^5.0.0",
+    "mini-iframe-rpc": "^1.7.3",
     "react-blockies": "^1.4.1",
+    "wagmi": "^0.10.10",
     "zustand": "^4.1.1"
   },
   "main": "dist/cjs/index.js",
